<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/placeholder1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/newNumber"
        app:layout_constraintRight_toLeftOf="@+id/newNumber" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:onClick="zero_input"
        android:text="@string/_0"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:onClick="one_input"
        android:text="@string/_1"
        app:layout_constraintLeft_toLeftOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="two_input"
        android:text="@string/_2"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="three_input"
        android:text="@string/_3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:onClick="four_input"
        android:text="@string/_4"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="five_input"
        android:text="@string/_5"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="six_input"
        android:text="@string/_6"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:onClick="seven_input"
        android:text="@string/_7"
        app:layout_constraintLeft_toLeftOf="@+id/newNumber"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="eight_input"
        android:text="@string/_8"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="nine_input"
        android:text="@string/_9"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="48dp"
        android:onClick="division_input"
        android:text="@string/division"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/button9"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="multiply_input"
        android:text="@string/multiply"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button6"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="subtraction_input"
        android:text="@string/subtraction"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="addition_input"
        android:text="@string/addition"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintLeft_toRightOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="clear_input"
        android:text="@string/clear"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0"
        app:layout_constraintLeft_toRightOf="@+id/button0" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:minWidth="48dp"
        android:onClick="equal_button"
        android:text="@string/submit"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
        app:layout_constraintLeft_toRightOf="@+id/buttonDot"
        tools:ignore="RtlHardcoded" />



</android.support.constraint.ConstraintLayout>